# atlasip

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: release.yml
docs/: backend_enrichment_v1.txt  backlog_atlasip_v1.txt  backlog_backend_v1.txt  backlog_export_v1.txt  backlog_frontend_v1.txt  backlog_parser_v2.txt  backlog_performance_v1.txt  roadmap.txt  spec-analysis-page.txt  spec-backend.txt  spec-datagrid.txt  spec-frontend.txt  spec-ip-page.txt  spec.txt  sprint_0.2.0.txt
docs/changelog/: 0.1.x.md  0.2.x.md  0.3.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.7.1.md
docs/developer/: architecture.md  build-instructions.md  config-schema.md  release-process.md
docs/user-manual/: configuration.md  getting-started.md  installation.md  troubleshooting.md  ui-overview.md
i18n/en-US/: errors.json  service.json  ui.json
i18n/fr-FR/: errors.json  service.json  ui.json
locales/: en.json  fr.json
scripts/: install-service-linux.sh  install-service-macos.sh  install-service-windows.ps1
src/: bgp.rs  cache.rs  cli.rs  config.rs  dns.rs  export.rs  geoip.rs  http.rs  i18n.rs  lib.rs  main.rs  metrics.rs  models.rs  retry.rs  utils.rs
src/i18n/: mod.rs
src/rdap/: client.rs  mod.rs
src/service/: linux.rs  macos.rs  mod.rs  windows.rs
src/whois/: client.rs  enrichment.rs  mod.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
ui/src/: app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
(+46 files in other folders)
