[workspace]
members  = [".", "ui/src-tauri"]
resolver = "2"

[package]
name        = "atlasip"
version     = "0.5.0-alpha"
edition     = "2024"
description = "Modern IP analysis tool — backend for AtlasIP"
license     = "Apache-2.0"

[lib]
name = "atlasip"
path = "src/lib.rs"

[[bin]]
name = "atlasip"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (API locale)
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (RDAP)
reqwest = { version = "0.12", features = ["json", "socks"] }

# DNS resolution
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration (TOML)
toml = "0.8"
config = { version = "0.14", features = ["toml"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Windows service management (spec §6)
# Only compiled on Windows — no impact on macOS / Linux builds.
[features]
ui = []

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
